--- a/prototypes/ui/assets/css-compiled/main.css
+++ b/prototypes/ui/assets/css-compiled/main.css
@@ -845,9 +845,6 @@ nav#sideNav {
   box-sizing: border-box;
   z-index: 5;
 }
-nav#sideNav * {
-  border: 1px solid;
-}
 nav#sideNav li.cat ul.item-container h1 {
   font-family: "GeneralSans", sans-serif;
   font-size: 0.75rem;
@@ -977,11 +974,16 @@ body#categorie nav#sideNav .sort-options:hover ul li:first-of-type {
 body#categorie nav#sideNav > ul.cat-container {
   width: auto;
   height: 100%;
+  overflow: scroll hidden;
+  white-space: nowrap;
 }
 @media (min-width: 700px) {
   body#categorie nav#sideNav > ul.cat-container {
     padding: 0 100px;
   }
+}
+body#categorie nav#sideNav > ul.cat-container #scrollContainer {
+  display: none;
 }
 body#categorie nav#sideNav > ul.cat-container li.cat {
   display: inline-block;
@@ -994,44 +996,7 @@ body#categorie nav#sideNav > ul.cat-container li.cat label {
   left: 0;
   margin: 2.5rem 0;
 }
-body#categorie nav#sideNav > ul.cat-container li.cat ul.item-container li.item {
-  display: inline-block;
-  margin: 1.25rem 12.5px 1.25rem 0;
-}
-body#categorie nav#sideNav > ul.cat-container li.cat ul.item-container li.item img.cover {
-  width: 20vw;
-}
-body#categorie nav#sideNav > ul.cat-container li.cat ul.item-container li.item img.cover:hover {
-  transform: scale(1.25);
-}
-body#categorie nav#sideNav.siema {
-  cursor: grab !important;
-}
-body#categorie nav#sideNav.siema > ul.cat-container li.cat ul.item-container {
-  overflow: visible !important;
-}
-body#categorie nav#sideNav.siema > ul.cat-container li.cat ul.item-container > div {
-  display: -webkit-box;
-  /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;
-  /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox;
-  /* TWEENER - IE 10 */
-  display: -webkit-flex;
-  /* NEW - Chrome */
-  display: flex;
-  /* NEW, Spec - Opera 12.1, Firefox 20+ */
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-body#categorie nav#sideNav:not(.siema) > ul.cat-container {
-  overflow: scroll hidden;
-  white-space: nowrap;
-}
-body#categorie nav#sideNav:not(.siema) > ul.cat-container li.cat ul.item-container {
+body#categorie nav#sideNav > ul.cat-container li.cat ul.item-container {
   display: -webkit-box;
   /* OLD - iOS 6-, Safari 3.1-6 */
   display: -moz-box;
@@ -1054,8 +1019,28 @@ body#categorie nav#sideNav:not(.siema) > ul.cat-container li.cat ul.item-contain
   -webkit-align-items: center;
   align-items: center;
 }
-body#categorie nav#sideNav:not(.siema) > ul.cat-container li.cat ul.item-container li.item {
+body#categorie nav#sideNav > ul.cat-container li.cat ul.item-container li.item {
+  display: inline-block;
   white-space: nowrap;
+  margin: 1.25rem 12.5px 1.25rem 0;
+}
+body#categorie nav#sideNav > ul.cat-container li.cat ul.item-container li.item img.cover {
+  width: 20vw;
+}
+body#categorie nav#sideNav > ul.cat-container li.cat ul.item-container li.item img.cover:hover {
+  transform: scale(1.5);
+}
+body#categorie nav#sideNav > ul.cat-container:not(.noJS) {
+  scrollbar-width: none;
+}
+body#categorie nav#sideNav > ul.cat-container:not(.noJS) ~ #scrollContainer {
+  display: inline-block;
+  position: absolute;
+  bottom: -3.75rem;
+  right: 25px;
+  padding: 1.25rem 12.5px;
+  background: transparent;
+  cursor: pointer;
 }
 body#categorie[data-categorie="1"] nav#sideNav li.cat:not([data-categorie="1"]) {
   display: none;
