--- a/prototypes/ui/assets/css-compiled/main.css
+++ b/prototypes/ui/assets/css-compiled/main.css
@@ -1221,19 +1221,18 @@ body#index main nav ul li video {
   position: fixed;
   left: 50%;
   bottom: 0;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(1);
   min-width: 100vw;
   min-height: 100vh;
-  mix-blend-mode: color-dodge;
+  mix-blend-mode: lighten;
   opacity: 0;
   transition: opacity 0s;
   z-index: -1;
 }
-body#index main nav ul li video.wasActivate {
-  opacity: 0.05;
-}
 body#index main nav ul li:hover video {
   opacity: 1;
+  transform: translateX(-50%) scale(1.25);
+  transition: all 0s transform 5s linear;
 }
 @media (min-width: 700px) {
   body#index main {
