--- a/prototypes/ui/assets/scss/component/_topbar.scss
+++ b/prototypes/ui/assets/scss/component/_topbar.scss
@@ -1,6 +1,7 @@
 #topbar{
 	@include flex();
 	@include justify-content(space-between);
+	z-index: 5;
 	margin-top: $baseline*2;
 	margin-bottom: $baseline*2;
 	@include for-size(desktop){
